--- a/homework/css/style.css
+++ b/homework/css/style.css
@@ -62,21 +62,20 @@ a {
 	text-align: center;
 	color: #ffffff;
 }
-#fst-btn {
+.btn {
 	margin: 0 auto;
 	padding: 15px 15px;
 	margin-top: 144px;
 	width: 87px;
 	height: 26px;
 	line-height: 26px;
-	z-index: -1;
 	border: 1px solid #fff;
 	color: #fff;
 	background-color: #1dd2af;
 }
 .btn:hover {
-	border-color: #1dd2af;
-	background-color: #55a998;
+	border:6px solid #78d8c5;
+	cursor: pointer;
 }
 #content {
 	width: 100%;
@@ -105,6 +104,7 @@ a {
 	height: 78px;
 }
 .icon {
+	font-size: 68px;
 	line-height: 68px;
 	margin-right: 310px;
 	color: #1abc9c;
@@ -227,13 +227,14 @@ a {
 	margin-top: 30px;
 }
 .footer {
-	margin-top: 160px;
+	margin-top: 130px;
 	width: 100%;
 	height: 257px;
 	background-color: #1abc9c;
 }
 #footer-logo {
 	margin: 0 auto;
+	margin-top: 130px;
 	width: 828px;
 	height: 110px;
 }
@@ -264,6 +265,7 @@ a {
 	width: 96px;
 	height: 96px;	
 	margin-right: 255px;
+	/*margin-bottom: 74px;*/
 	background-color: #f6f6f6;
 	text-align: center;
 	float:left;
