--- a/homework/iconfont/footer-iconfont/iconfont.css
+++ b/homework/iconfont/footer-iconfont/iconfont.css
@@ -7,9 +7,9 @@
   url('iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
 
-.iconfont {
+.foot-icon {
   font-family:"iconfont" !important;
-  font-size:68px;
+  font-size:43px;
   font-style:normal;
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
